<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/imgregister"
    tools:context=".activity.RegisterActivity">


    <ImageView
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_close_24"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's sign up &amp; fun it"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/montserratbold"
        android:textColor="@color/black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MATCHY"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserratbold"
        android:textColor="@color/main"/>


    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserratmedium"
        android:hint="@string/mail_phone"
        android:background="@drawable/base_edit"/>

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserratmedium"
        android:hint="@string/id"
        android:background="@drawable/base_edit"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_edit"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="@drawable/base_edit"
            android:fontFamily="@font/montserratmedium"
            android:hint="@string/password"
            android:padding="15dp" />

        <ImageView
            android:id="@+id/btn_visit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_visibility_off_24"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_edit"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_repeat"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="@drawable/base_edit"
            android:fontFamily="@font/montserratmedium"
            android:hint="@string/repeat_password"
            android:padding="15dp" />

        <ImageView
            android:id="@+id/btn_visit_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_visibility_off_24"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_button"
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:layout_margin="20dp"/>


</LinearLayout>