<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    android:layout_margin="20sp"
    tools:context=".activity.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome To"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/montserratbold"
        android:textColor="@color/black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MATCHY"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="10sp"
        android:fontFamily="@font/montserratbold"
        android:textColor="@color/main"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="280sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:adjustViewBounds="true"
        android:src="@drawable/imglogin" />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/montserratmedium"
        android:hint="@string/id"
        android:background="@drawable/base_edit"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_edit"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="@drawable/base_edit"
            android:fontFamily="@font/montserratmedium"
            android:password="true"
            android:hint="@string/password"
            android:padding="15sp" />

        <ImageView
            android:id="@+id/btn_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:src="@drawable/ic_baseline_visibility_off_24"/>

    </LinearLayout>





    <TextView
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/montserratregular"
        android:textColor="@color/main"
        android:layout_gravity="end"
        android:layout_marginRight="10sp"
        android:textSize="10sp"
        android:layout_marginTop="10sp"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_button"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_margin="20sp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:fontFamily="@font/montserratmedium"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textColor="@color/main"
            android:fontFamily="@font/montserratmedium"
            android:textSize="15sp"/>




    </LinearLayout>





</LinearLayout>